<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_card_close_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".CardCloseUpActivity">

        <ImageView
            android:id="@+id/close_up_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back450"
            android:contentDescription="@string/cardBack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/discard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                style="@style/appButton"
                android:visibility="invisible"
                android:text="@string/discard_button" />

            <Button
                android:id="@+id/choose_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                style="@style/appButton"
                android:text="@string/choose" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                style="@style/appButton"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/trash_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                style="@style/appButton"
                android:visibility="invisible"
                android:text="@string/trash_button" />

        </LinearLayout>


</LinearLayout>